--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="description" content="">
         <meta name="author" content="">    
         <title>Veille Techno</title>    
+        <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="vendors/bootstrap4.min.css">
         <link href="style.css" rel="stylesheet">
       </head>    
@@ -13,6 +14,7 @@
                 <div class="col">accueil</div>
                 <div class="col">technos</div>
                 <div class="col">contact</div>
+                <div class="col"><a href="add_techno.html">add entries</a></div>
             </div>
         <h1>Accueil</h1>
         <h2>Technologies à veiller</h2>
